# voice_agent_evals

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ci.yml.disabled
backend/api/: main.py
backend/api/routes/: evaluate.py  reports.py
backend/voice_agent_evals/: __init__.py  cli.py  evaluator.py
backend/voice_agent_evals/ingestion/: audio.py  transcribe.py
backend/voice_agent_evals/metrics/: __init__.py  base.py  coherence.py  conversation_quality.py  intent.py  response_latency.py  speech_style.py  task_completion.py  vad_quality.py
backend/voice_evals/: __init__.py  cli.py  evaluator.py  trace.py
backend/voice_evals/ingestion/: transcribe.py
backend/voice_evals/metrics/: __init__.py  base.py  coherence.py  conversation_quality.py  intent.py  response_latency.py  speech_style.py  task_completion.py  vad_quality.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: HistoryView.tsx  MetricCard.tsx  NavBar.tsx  ReportView.tsx  ScoreGauge.tsx  TranscriptTable.tsx  UploadView.tsx
scenarios/: restaurant-booking.yaml
tests/: test_evaluator.py  test_trace.py
